Added auto-save feature

--- a/Mangopad.csproj
+++ b/Mangopad.csproj
@@ -4,10 +4,17 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <UseWPF>true</UseWPF>
+    <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
+    <PackageIcon>mangopadsmall.ico</PackageIcon>
   </PropertyGroup>
 
   <ItemGroup>
     <None Remove="ViewModels\Notecs" />
+    <None Include="./mangopadsmall.ico">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
   <ItemGroup>
